src/test/deca/context/valid/tests/13_modulo.deca
// Description:
//    Test modulo
//
// Historique:
//    cree le 16/01/2022

{
        int x = 17%3;
}
