src/test/deca/context/invalid/48_NonObjectSelect.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: int isn't a class
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   // Doit etre refuse.
   int x = a.x;
}
